--- a/src/modules/mixer/module.desktop
+++ b/src/modules/mixer/module.desktop
@@ -33,5 +33,5 @@ Comment[pt]=Um módulo que disponibiliza um controlo para alterar o volume
 Comment[ru]=Модуль для управления уровнями громкости.
 Comment[sr]=Јединица која обезбеђује мешач за промену јачине звука.
 Comment[tr]=Sesi ayarlarmak için kullanılan karıştırıcı modülü.
-Icon=preferences-desktop-mixer
+Icon=e-module-mixer
 X-Enlightenment-ModuleType=system
