shot - make initial size fit as best as possible and be big

--- a/src/modules/meson.build
+++ b/src/modules/meson.build
@@ -50,7 +50,7 @@ mods = [
   'battery',
   'cpufreq',
   'clock',
-# custyom sub modules and custom data
+# custom sub modules and custom data
   'wizard',
 # also standard modules, just with only a desktop file using a generic icon
   'conf_theme',
