e wallpapers - add new flattish design wallpaper number 2

--- a/data/backgrounds/meson.build
+++ b/data/backgrounds/meson.build
@@ -1,4 +1,5 @@
 install_data([ 'Flat-Fan.edj',
+               'Sunset-Hills.edj',
 
                'Brown_Rock_Hi.edj',
                'Colorful_Roses.edj',
