e backgrounds - add a textures stone pattern bg too

--- a/data/backgrounds/meson.build
+++ b/data/backgrounds/meson.build
@@ -1,6 +1,8 @@
 install_data([ 'Flat-Fan.edj',
                'Sunset-Hills.edj',
 
+               'Flat-Stone-Pattern.edj',
+
                'Brown_Rock_Hi.edj',
                'Colorful_Roses.edj',
                'Darkconcrete.edj',
