add another hand designed bg with centered image anbd pattern

--- a/data/backgrounds/meson.build
+++ b/data/backgrounds/meson.build
@@ -2,6 +2,7 @@ install_data([ 'Flat-Fan.edj',
                'Sunset-Hills.edj',
 
                'Flat-Stone-Pattern.edj',
+               'Paper-Flower.edj',
 
                'Mountain.edj',
                'Sunset-Clouds.edj',
