add more wallpapers

--- a/data/backgrounds/meson.build
+++ b/data/backgrounds/meson.build
@@ -1,5 +1,6 @@
 install_data([ 'Flat-Fan.edj',
                'Sunset-Hills.edj',
+               'Dunes.edj',
 
                'Flat-Stone-Pattern.edj',
                'Paper-Flower.edj',
