--- a/src/bin/tools/fprint/data/desktop/enlightenment_fprint.desktop
+++ b/src/bin/tools/fprint/data/desktop/enlightenment_fprint.desktop
@@ -3,13 +3,13 @@ Encoding=UTF-8
 Type=Application
 Name=Fingerprint Password Settings
 Name[de]=Fingerprint Passwort Einstellungen
-Name[fr]=Reconnaissance des empreintes digitales
+Name[fr]=Reconnaissance par empreinte digitale
 Name[it]=Impostazioni impronte digitali
 Name[pt]=Definições de palavras-passe de impressão digital
 Icon=enlightenment_fprint
 Exec=enlightenment_fprint
 Comment=Tool to set up or modify fingerprint authentication
-Comment[fr]=Outil pour configurer ou modifier l'authentification par empreintes digitales.
+Comment[fr]=Outil pour configurer ou modifier l'authentification par empreintes digitales
 Comment[it]=Utilità per impostare o modificare l'autenticazione mediante sensore di impronte digitali
 Comment[pt]=Ferramenta para configurar ou modificar a autenticação das impressões digitais
 GenericName=GUI for Fingerprint Authentication
