Updating french translation

--- a/src/modules/mixer/module.desktop
+++ b/src/modules/mixer/module.desktop
@@ -25,7 +25,7 @@ Comment[de]=Ein Modul, dass einen Mixer zum Ändern der Lautstärke bereit stell
 Comment[eo]=Modulo de sonmiksilo por sxanĝi la sonfortecon.
 Comment[es]=Un módulo que proporciona un mezclador para cambiar el volumen.
 Comment[fi]=Tämä moduuli tuo käyttöön mikserin äänenvoimakkuuksien säätämistä varten
-Comment[fr]=Fournit un mélangeur pour régler le volume.
+Comment[fr]=Un module pour paramétrer le volume et les flux.
 Comment[gl]=Un módulo que fornece un control para cambiar o volume.
 Comment[it]=Un modulo che fornisce un mixer per regolare il volume.
 Comment[ms]=Modul untuk sediakan penadun bagi volum yang berubah.
