Updating french and italian translations

--- a/src/bin/tools/fprint/data/desktop/enlightenment_fprint.desktop
+++ b/src/bin/tools/fprint/data/desktop/enlightenment_fprint.desktop
@@ -4,7 +4,7 @@ Type=Application
 Name=Fingerprint Password Settings
 Name[de]=Fingerprint Passwort Einstellungen
 Name[fr]=Reconnaissance par empreinte digitale
-Name[it]=Impostazioni impronte digitali
+Name[it]=Impostazioni autenticazione con impronta digitale
 Name[pt]=Definições de palavras-passe de impressão digital
 Icon=enlightenment_fprint
 Exec=enlightenment_fprint
@@ -13,5 +13,7 @@ Comment[fr]=Outil pour configurer ou modifier l'authentification par empreintes 
 Comment[it]=Utilità per impostare o modificare l'autenticazione mediante sensore di impronte digitali
 Comment[pt]=Ferramenta para configurar ou modificar a autenticação das impressões digitais
 GenericName=GUI for Fingerprint Authentication
+GenericName[fr]=Interface d'authentification par empreintes digitales
+GenericName[it]=Interfaccia autenticazione con impronta digitale
 Categories=Settings;DesktopSettings;
 StartupWMClass=enlightenment_fprint
