wayland support - add watermark and bug message and pause
this will clearly alert a user they are using e in wayland mode. this
is needed as there seems to be far too much confusion if e is in
wayland or not and when it is people having issues. this makes sure
e's wayland session desktop also has the label in it so it's clear etc.

--- a/data/images/meson.build
+++ b/data/images/meson.build
@@ -2,7 +2,8 @@ install_data([ 'enlightenment.png',
                'test.png',
                'test.jpg',
                'test.edj',
-               'test.svg'
+               'test.svg',
+               'wayland.png'
              ],
              install_dir: join_paths(dir_data, 'enlightenment/data/images')
             )
