add simple sound play api to play samples

--- a/meson.build
+++ b/meson.build
@@ -293,6 +293,7 @@ dep_ecore_con        = dependency('ecore-con'       , required: true)
 dep_ecore_input      = dependency('ecore-input'     , required: true)
 dep_ecore_input_evas = dependency('ecore-input-evas', required: true)
 dep_ecore_evas       = dependency('ecore-evas'      , required: true)
+dep_ecore_audio      = dependency('ecore-audio'     , required: true)
 dep_evas             = dependency('evas'            , required: true)
 dep_edje             = dependency('edje'            , required: true)
 dep_efreet           = dependency('efreet'          , required: true)
