--- a/src/bin/tools/open/meson.build
+++ b/src/bin/tools/open/meson.build
@@ -1,6 +1,6 @@
 executable('enlightenment_open',
            [ 'e_open.c' ],
-           include_directories: include_directories('../../../..'),
+           include_directories: include_directories('../../../..', '../..'),
            dependencies       : [ dep_eina, dep_ecore, dep_efreet, dep_efreet_mime ],
            install_dir        : dir_bin,
            install            : true
