wl desktop session file - some dm's dont like VAR=x without env
add env at the start as they dont seem to like running things with just

VAR=x VAR2=y cmd

enlightenment happily does this... sddm does not it seems.

--- a/data/session/wl/enlightenment.desktop.in
+++ b/data/session/wl/enlightenment.desktop.in
@@ -34,5 +34,5 @@ Comment[sr]=Пријавите се за коришћење Просвећења
 Comment[tr]=Enlightenment kullanarak giriş yaın (Version @VERSION@)
 Icon=@prefix@/share/enlightenment/data/images/enlightenment.png
 TryExec=@prefix@/bin/enlightenment_start
-Exec=E_WL_FORCE=drm E_COMP_ENGINE=gl @prefix@/bin/enlightenment_start
+Exec=env E_WL_FORCE=drm E_COMP_ENGINE=gl @prefix@/bin/enlightenment_start
 DesktopNames=Enlightenment
