Updating french translation

--- a/src/bin/tools/fprint/data/desktop/enlightenment_fprint.desktop
+++ b/src/bin/tools/fprint/data/desktop/enlightenment_fprint.desktop
@@ -3,7 +3,7 @@ Encoding=UTF-8
 Type=Application
 Name=Fingerprint Password Settings
 Name[de]=Fingerprint Passwort Einstellungen
-Name[fr]=Reconnaissance par empreinte digitale
+Name[fr]=Reconnaissance des empreintes
 Name[it]=Impostazioni autenticazione con impronta digitale
 Name[pt]=Definições de palavras-passe de impressão digital
 Icon=enlightenment_fprint
