Updating portuguese and italian translations

--- a/src/bin/tools/fprint/data/desktop/enlightenment_fprint.desktop
+++ b/src/bin/tools/fprint/data/desktop/enlightenment_fprint.desktop
@@ -5,7 +5,7 @@ Name=Fingerprint Password Settings
 Name[de]=Fingerprint Passwort Einstellungen
 Name[fr]=Reconnaissance des empreintes
 Name[it]=Impostazioni autenticazione con impronta digitale
-Name[pt]=Definições de palavras-passe de impressão digital
+Name[pt]=Reconhecimento de impressões digitais
 Icon=enlightenment_fprint
 Exec=enlightenment_fprint
 Comment=Tool to set up or modify fingerprint authentication
