--- a/src/modules/appmenu/module.desktop
+++ b/src/modules/appmenu/module.desktop
@@ -7,11 +7,13 @@ Name[eo]=Aplikaĵomenuo
 Name[fi]=Sovellusvalikko
 Name[fr]=Menu des applications
 Name[gl]=Menú de aplicativos
+Name[it]=Menù applicazione
 Name[ja]=アプリケーションメニュー
 Name[ko]=프로그램 메뉴
 Name[lt]=Programų meniu
 Name[ms]=Menu Aplikasi
 Name[pl]=Menu programów
+Name[pt]=Menu de aplicações
 Name[ru]=Меню управления приложениями
 Name[sr]=Изборник програма
 Name[tr]=Uygulama Menüsü
@@ -22,6 +24,7 @@ Comment[fi]=Vempain joka sisältää valitun ikkunan valikkopalkin.
 Comment[fr]=Gadget contenant la barre de menus de l'application au premier plan.
 Comment[it]=Gadget che contiene la barra degli strumenti dell'applicazione in primo piano.
 Comment[ms]=Gadjet yang memegang palang menu bagi aplikasi hadapan.
+Comment[pt]=Gadget que contém a barra de menu das aplicações em primeiro plano.
 Comment[ru]=Гаджет отображающий меню активного приложения.
 Comment[sr]=Справица која држи траку изборника покренутих програма.
 Comment[tr]=Ön plandaki uygulamanın menü çubuğunu tutan araç.
