--- a/src/modules/bluez5/module.desktop
+++ b/src/modules/bluez5/module.desktop
@@ -11,6 +11,7 @@ Name[sr]=Блуез5
 Name[tr]=Bluetooth
 Comment=Bluetooth control Gadget.
 Comment[fr]=Gadget de configuration Bluetooth.
-Comment[it]=Gadget di controllo del Bluetooth.
+Comment[it]=Gadget per il controllo del Bluetooth.
+Comment[pt]=Gadget de controlo Bluetooth.
 Icon=e-module-bluez5
 X-Enlightenment-ModuleType=utils
