Updating french translation

--- a/src/modules/connman/module.desktop
+++ b/src/modules/connman/module.desktop
@@ -47,7 +47,7 @@ Comment[de]=Drahtlose und kabelgebundene Nezwerke als Nutzer verwalten
 Comment[eo]=Por kontroli sendratajn kaj dratajn retojn kiel uzanto.
 Comment[es]=Controle las redes inalámbricas o cableadas como usuario.
 Comment[fi]=Ohjaa Wifi- ja ethernetverkkoja tavallisena käyttäjänä.
-Comment[fr]=Permet de contrôler les réseaux Wifi et câblés en tant qu'utilisateur.
+Comment[fr]=Permet de contrôler les réseaux Wi-Fi et câblés via Connman.
 Comment[gl]=Controle as redes sen fíos ou cableadas como usuario.
 Comment[hu]=Wifi és vezetékes hálózatok kezelését teszi lehetővé.
 Comment[it]=Controlla le reti wireless e cablate come utente.
