state system - add start of it
Why this? A way to have a shared store of "variables" or states that
any part of e or modules can store some simple things in and thus also
broadcast changes to state, listen to changes in state and react.

I am thinking of things like advertising:

  "/power/ac"               = [ true | false ]
  "/power/battery/low"      = [ true | false ]
  "/power/battery/charging" = [ true | false ]
  "/power/state"            = [ "on" | "sleep" ]
  "/screen"                 = [ "on" | "dim" | "blank" ]
  "/screen/locked"          = [ true | false ]
  "/network/online"         = [ true | false ]
  "/network/location"       = "name of network detected"

--- a/src/bin/meson.build
+++ b/src/bin/meson.build
@@ -181,6 +181,7 @@ src = [
   'e_slidesel.c',
   'e_spectrum.c',
   'e_startup.c',
+  'e_state.c',
   'e_sys.c',
   'e_system.c',
   'e_test.c',
@@ -361,6 +362,7 @@ hdr = [
   'e_slidesel.h',
   'e_spectrum.h',
   'e_startup.h',
+  'e_state.h',
   'e_sys.h',
   'e_system.h',
   'e_test.h',
