paranoia for silly people - check efl version aty runtime via eina
enlightenment_start checks the efl version and complains if it's too
old. this shoulpd at runtime give some sensible output for shen
someone did somthing very silly. it'll write this to stderr AND to
~/.e-log.log

--- a/meson.build
+++ b/meson.build
@@ -83,6 +83,11 @@ config_h.set('_POSIX_PTHREAD_SEMANTICS', '1')
 config_h.set('_TANDEM_SOURCE'          , '1')
 config_h.set('__EXTENSIONS__'          , '1')
 
+str_ver_split = efl_version.replace('>= ', '').split('.')
+config_h.set('MIN_EFL_VERSION_MAJ', str_ver_split[0])
+config_h.set('MIN_EFL_VERSION_MIN', str_ver_split[1])
+config_h.set('MIN_EFL_VERSION_MIC', str_ver_split[2])
+
 subdir('po')
 
 darwin = host_machine.system().startswith('darwin')
