Adding french comment and updating italian

--- a/src/modules/convertible/module.desktop
+++ b/src/modules/convertible/module.desktop
@@ -3,6 +3,7 @@ Type=Link
 Name=E-convertible
 GenericName=E-convertible
 Comment=Helps to manage screen rotation based on accelerometer
-Comment[it]=Aiuta a gestire la rotazione dello schermo basandosi sui dati dell'accelerometro
+Comment[fr]=Permet de gérer la rotation de l'écran en fonction de l'accéléromètre.
+Comment[it]=Consente di gestire la rotazione dello schermo usando l'accelerometro
 Icon=e-module-convertible
 X-Enlightenment-ModuleType=system
