cpufreq - revamp module to show freqs and usage
now it shows a usage colorbar display in the gagdte that scroll by, a
piopup with this + cpu freq on clikc and a slider for power level
(power save, balance low, balanced, hi, performance) and new config
for power levels

--- a/src/modules/cpufreq/meson.build
+++ b/src/modules/cpufreq/meson.build
@@ -1,5 +1,9 @@
 src = files(
   'e_mod_main.c',
   'e_mod_config.c',
-  'e_mod_main.h'
+  'e_mod_main.h',
+  'cpf_cpu.c',
+  'cpf_cpu.h',
+  'cpf.c',
+  'cpf.h'
 )
