tmp desktop - fix ja translation
fixes #86
@fix

--- a/data/favorites/tmp.desktop
+++ b/data/favorites/tmp.desktop
@@ -23,7 +23,7 @@ Comment[fi]=Väliaikaistiedostot
 Comment[fr]=Les fichiers temporaires
 Comment[gl]=Ficheiros temporais
 Comment[it]=File temporanei
-Comment[ja]=作業ファイル
+Comment[ja]=テンポラリファイル
 Comment[lt]=Laikinieji failai
 Comment[ms]=Fail sementara
 Comment[pl]=Pliki tymczasowe
