Fixed Japanese translation

--- a/data/favorites/tmp.desktop
+++ b/data/favorites/tmp.desktop
@@ -7,7 +7,7 @@ Name[eo]=Dumtempaj
 Name[fi]=Väliaikaiset
 Name[fr]=Temporaires
 Name[gl]=Temporais
-Name[ja]=気温
+Name[ja]=テンポラリ
 Name[ms]=Sementara
 Name[pl]=Temperatura
 Name[pt]=Temporários
