Fixed Polish translation

--- a/data/favorites/tmp.desktop
+++ b/data/favorites/tmp.desktop
@@ -9,7 +9,7 @@ Name[fr]=Temporaires
 Name[gl]=Temporais
 Name[ja]=テンポラリ
 Name[ms]=Sementara
-Name[pl]=Temperatura
+Name[pl]=tymczasowy
 Name[pt]=Temporários
 Name[ru]=Временный каталог
 Name[sr]=Привременo
