acpi - we no longer need acpid, e_system now does it for us
e_system does what acpid does - looks at inopuit devices on linux and
listens to them (only specific events/keycodes).

acpid now is no longer used/needed

--- a/src/bin/system/meson.build
+++ b/src/bin/system/meson.build
@@ -8,6 +8,7 @@ src = [
   'e_system_rfkill.c',
   'e_system_l2ping.c',
   'e_system_cpufreq.c',
+  'e_system_acpi.c',
   'e_system.h',
 ]
 executable('enlightenment_system', src,
