pants - add lederhosen

--- a/src/modules/pants/pants-db/meson.build
+++ b/src/modules/pants/pants-db/meson.build
@@ -1,9 +1,11 @@
 install_data([
-              '000-pants-on.png.txt',  '000-pants-on.png',
-              '001-pants-off.png.txt', '001-pants-off.png',
-              '010-skirt-on.png.txt',  '010-skirt-on.png',
-              '011-skirt-off.png.txt', '011-skirt-off.png',
-              '020-kilt-on.png.txt',   '020-kilt-on.png',
-              '021-kilt-off.png.txt',  '021-kilt-off.png',
+              '000-pants-on.png.txt',        '000-pants-on.png',
+              '001-pants-off.png.txt',       '001-pants-off.png',
+              '010-skirt-on.png.txt',        '010-skirt-on.png',
+              '011-skirt-off.png.txt',       '011-skirt-off.png',
+              '020-kilt-on.png.txt',         '020-kilt-on.png',
+              '021-kilt-off.png.txt',        '021-kilt-off.png',
+              '030-lederhosen-on.png.txt',   '030-lederhosen-on.png',
+              '031-lederhosen-off.png.txt',  '031-lederhosen-off.png',
               ],
               install_dir: join_paths(_dir + '/pants-db'))
