pants - build - fix missing quote

--- a/src/modules/pants/pants-db/meson.build
+++ b/src/modules/pants/pants-db/meson.build
@@ -8,6 +8,6 @@ install_data([
               '030-lederhosen-on.png.txt',   '030-lederhosen-on.png',
               '031-lederhosen-off.png.txt',  '031-lederhosen-off.png',
               '040-malloc-pants-on.png.txt', '040-malloc-pants-on.png',
-              '041-malloc-pants-off.png.txt','041-malloc-pants-off.png,
+              '041-malloc-pants-off.png.txt','041-malloc-pants-off.png'
               ],
               install_dir: join_paths(_dir + '/pants-db'))
