--- a/src/bin/system/meson.build
+++ b/src/bin/system/meson.build
@@ -9,6 +9,7 @@ src = [
   'e_system_l2ping.c',
   'e_system_cpufreq.c',
   'e_system_acpi.c',
+  'e_system_battery.c',
   'e_system.h',
 ]
 executable('enlightenment_system', src,
